[package]
name = "tower-defense"
version = "0.1.0"
authors = []
edition = "2018"

[dependencies]
amethyst = "0.13.0"
specs-derive = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
rand = "0.7.2"

[features]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]